# smartcar

./: .gitignore  README.md
BLDC/: ADC.c  ADC.h  AR_PF.c  AR_PF.h  BLDC.uvgui.UnikoZera  BLDC.uvgui.fuwaki  BLDC.uvopt  BLDC.uvproj  FOC_Controller.c  FOC_Controller.h  Lowpass_Filter.c  Lowpass_Filter.h  Observer.c  Observer.h  PID_Controller.c  PID_Controller.h  PWM_Controller.c  PWM_Controller.h  TrigTable.c  TrigTable.h  main.c  uart_Debug.c  uart_Debug.h
BLDC/Listings/: BLDC.map  FOC_Controller.lst  Lowpass_Filter.lst  Observer.lst  PID_Controller.lst  PWM_Controller.lst  main.lst
BLDC/Objects/: BLDC  BLDC.build_log.htm  BLDC.hex  BLDC.lnp  (+6 more)
Camera/: Camera.uvopt  Tracking.c  Tracking.h
Core/: AR_PF.c  Communication.h  Core.uvgui.UnikoZera  Core.uvgui.fuwaki  Core.uvopt  Core.uvproj  Error.c  Error.h  Math.c  Math.h  Motor.c  Motor.h  Muti_SPI_Device.c  Muti_SPI_Device.h  Observer.c  Observer.h  Oled.c  Oled.h  PID.c  PID.h  Path.c  Path.h  Timer.c  Timer.h  Track.c  Track.h  config.h  i2c.c  i2c.h  main.c  main.h  uart.c  uart.h
Debugger/debugger/: Cargo.toml  espflash.toml  sdkconfig.defaults
Debugger/debugger/.cargo/: config.toml
Debugger/debugger/src/: kcp_conn.rs  main.rs  nrf24.rs
Examples/: SPI_Example.c
Sensors/: Common.c  Common.h  Encoder.c  Encoder.h  Fusion.c  Fusion.h  GPS.c  GPS.h  GPS_uart.c  GPS_uart.h  Gyroscope.c  Gyroscope.h  ICM42688_SPI.c  ICM42688_SPI.h  Magnetic.c  Magnetic.h  SPI_MultiDevice.c  SPI_MultiDevice.h  Sensors.uvgui.UnikoZera  Sensors.uvopt  Sensors.uvproj  Timer.c  Timer.h  main.c  tempCodeRunnerFile.c  uart.c  uart.h
(+57 files in other folders)
