[package]
name = "debugger"
version = "0.1.0"
authors = ["fuwaki <tiny.fly@outlook.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "debugger"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["master"]
master=[]
slave=[]

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync", "experimental"] }

anyhow = "1.0.96"
rand = "0.9.0"
embedded-svc = "0.28.1"
# embassy-executor = { version = "0.7.0", features = ["arch-std"] }
heapless = "0.8.0"
kcp = "0.5.3"
bytes = "1.10.1"
env_logger = "0.11.7"
time = "0.3.39"
ssd1306 = "0.9.0"
embedded-graphics = "0.8.1"
esp-idf-hal = "0.45.2"
rf24-rs = "0.2.0"
embedded-hal = "1.0.0"
thiserror = "2.0.12"
serde = "1.0.219"

[build-dependencies]
embuild = "0.33"

